      thingbrowser screen by name. [James]

  * New Plotscripting Features
    * "save screenshot" [Ralph]
    * "append number": added "min length" and "pad with zeroes" args [Ralph]
    * "use door": added "fade screen" argument, so you can use a door without
      fading [Ralph]
    * "npc copy number" (opposite to "npc reference") [Ralph]

  * Changes

  * Bugfixes
    * Fixed exporting a blank BMP file instead of a tileset or backdrop
      when you browse to pick a different export location other than
      the default. [James]
    * Fix a crash that happened when you used ellipse-related scripting
      commands on a non-ellipse slice [sotrain515, James]

  * Stuff Only Developers Will Notice


Jan ? 2018 [Etheldreme+1]

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]
    * Panel slices set to clip had broken child clipping and positioning
      when inside another clipping slice or over the screen edge [Ralph]
    * In the textbox editor, pressing Ctrl+Left/Right to link to another box
      appeared to work but actually the "After" tag condition didn't
      get set to "Always", although it claimed it was. It didn't actually
      get set to "Always" until you entered a submenu. The in-game F1
      textbox debug screen also showed "ALWAYS" instead of "NEVER"! [Ralph]

Dec 3 2017 [Etheldreme]

  Highlights:
    * Many new map-editor features, including mouse support.
    * Enemy "appear" animations.
    * Customizable hero experience curve.
    * Textbox save/load/delete/end game conditionals.
    * Unhid still-experimental option for non-320x200 games.
    * Copy-paste text between the editor and other applications.
    * Visual browsers for sprites and many other things.
    * See below for more...

  * New Features
    * You can now browse for sprites, items, and many other properties
      rather than typing in their ID numbers. [James]