@@ -683,6 +683,10 @@ define function, begin
 658,slicetype,1,0             # Returns a slicetype:* constant
 659,_asserteq,4,0,0,0,0       # Used in the macro expansion of assert(x==y)
 660,savescreenshot,0          # Save a screenshot
+661,sliceisline,1,0           # Check slice type
+662,createline,3,0,0,0        # Create line slice (w, h, color)
+663,getlinecolor,1,0          # Line slice color
+664,setlinecolor,2,0,0        # Set line slice color
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
