@@ -34,6 +34,7 @@ DECLARE FUNCTION valid_plotsprite(byval handle as integer) as bool
 DECLARE FUNCTION valid_plotrect(byval handle as integer) as bool
 DECLARE FUNCTION valid_plottextslice(byval handle as integer) as bool
 DECLARE FUNCTION valid_plotellipse(byval handle as integer) as bool
+DECLARE FUNCTION valid_plotlineslice(byval handle as integer) as bool
 DECLARE FUNCTION valid_plotgridslice(byval handle as integer) as bool
 DECLARE FUNCTION valid_plotselectslice(byval handle as integer) as bool
 DECLARE FUNCTION valid_plotscrollslice(byval handle as integer) as bool
@@ -72,6 +73,7 @@ DECLARE FUNCTION valid_door(thisdoor as door, byval id as integer=-1) as bool
 DECLARE FUNCTION valid_map_layer(layer as integer, byval errlvl as scriptErrEnum = serrBadOp) as bool
 DECLARE FUNCTION valid_tile_pos(byval x as integer, byval y as integer) as bool
 DECLARE FUNCTION valid_save_slot(slot as integer) as bool
+DECLARE FUNCTION valid_color(index as integer) as bool
 
 DECLARE SUB greyscalepal
 DECLARE SUB tweakpalette (byval r as integer, byval g as integer, byval b as integer, byval first as integer = 0, byval last as integer = 255)
